--- a/_posts/2023-08-13-github-블로그-개설.md
+++ b/_posts/2023-08-13-github-블로그-개설.md
@@ -1,9 +1,7 @@
 ---
 layout: post
-title: Github Blog 개설
-tags: Vlog
-math: true
-toc: true
+title: Github 블로그 개설했다!
+tags: [jekyll theme, jekyll, tutorial, Vlog]
 date: 2023-08-13 17:30 +0800
 ---
 
